# image-processing

./: CMakeLists.txt  build.vs.2019.cmake
data/videos_lab04/: 500Rub.MOV
prj.labs/lab01/: lab01.cpp
prj.labs/lab02/: lab02.cpp
prj.labs/lab04/: lab04.cpp
prj.labs/task1/: CMakeLists.txt  task.cpp  task.report.md.in.txt
